--- a/www/vars.less
+++ b/www/vars.less
@@ -1,3 +1,6 @@
 @padding:20px;
 @border-color:#c5c5c5;
 @block-color:lighten(@border-color, 18);
+
+@animation-duration:0.3s;
+@animation-wait:0.1s;
